# lectures

algo_struct/: basic_tasks.ipynb  lesson_0_t_search.ipynb  lesson_10_search_tree.ipynb  lesson_11_lca.ipynb  lesson_1_data_structures.ipynb  lesson_2_sort.ipynb  lesson_3_sort_heap_k.ipynb  lesson_4_heaps.ipynb  lesson_5_disjoint.ipynb  lesson_6_hashing.ipynb  lesson_7_dp.ipynb  lesson_8_iterations.ipynb  lesson_9_range_tree.ipynb  math_hacks.ipynb  persistent.ipynb
algo_struct/lesson_0_1_search_sort/: CMakeLists.txt  galoping_merge.cpp  galoping_merge.h  lection_0_search.cpp  lection_0_search.h  lesson_1_sort.cpp  lesson_1_sort.h  main.cpp  my_merge.cpp  my_merge.h
algo_struct/lesson_5_disjoint_set/: CMakeLists.txt  DisjointSetTree.h  (+4 more)
algo_struct/lesson_6_hashing/: BloomFilter.cpp  BloomFilter.h  CMakeLists.txt  CuckooHashing.cpp  CuckooHashing.h  HashList.cpp  HashList.h  HashOpenAddressing.cpp  HashOpenAddressing.h  MurmurHash3.h  RandomHashFunction.cpp  RandomHashFunction.h  main.cpp  utils.cpp  utils.h
algo_struct/lesson_9_range_tree/: BinaryIndexedTree.cpp  BinaryIndexedTree.h  CMakeLists.txt  RangeOperation.cpp  RangeOperation.h  RangeTree.cpp  RangeTree.h  RangeTreeNoRec.cpp  RangeTreeNoRec.h  RangeTreeOperation.cpp  RangeTreeOperation.h  SparseTable.cpp  SparseTable.h  main.cpp
nn_math/: functions.py  model.py  operations.py  tensor.py  utils.py
nn_math_2/: __old_nn_math.ipynb  lesson_1_base.ipynb  lesson_2_calculus.ipynb  lesson_3_chain_rule.ipynb  lesson_4_example.ipynb  lesson_5_multidimentional.ipynb  lesson_6_examples.ipynb  lesson_7_framework.ipynb
(+4 files in other folders)
